# nuscenes-sdk-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs
tests/: test_lidarseg.py  test_nuscenes.py
