[package]
name = "nuscenes_rs"
version = "0.1.0"
edition = "2021"
description = "Rust-backed core utilities for the nuScenes Python SDK"

[lib]
name = "nuscenes_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
