[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "nuscenes-rs"
version = "0.1.0"
description = "Rust-backed core utilities for the nuScenes Python SDK"
readme = "README.md"
license = "LICENSE"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha",
]

[tool.maturin]
profile = "release"
features = ["pyo3/extension-module"]

[dependency-groups]
test = [
    "numpy>=1.24.4",
    "pytest>=8.3.5",
]
